Random Background Color Updated

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <title>Assignment-5</title>
 </head>
 
-<body class="bg-[#F4F7FF]">
+<body id="random-bg-change" class="bg-[#F4F7FF]">
     <header class="flex justify-center">
         <div class="flex justify-between h-[6.25rem] w-[96rem] my-6 bg-white rounded-2xl px-6">
             <div class="flex items-center gap-2">
@@ -84,7 +84,7 @@
                     <img height="32px" width="32px" src="assets/checkbox.png" alt="">
                     <p id="check-box" class="bold text-[32px] tracking-wide">23</p>
                 </div>
-                <div class="bg-[#F4F7FF] h-16 w-16 flex justify-center items-center rounded-full">
+                <div id="bg-change" class="bg-[#F4F7FF] h-16 w-16 flex justify-center items-center rounded-full">
                     <img src="assets/theme-btn.png" alt="">
                 </div>
             </div>
